--- a/src/Payroll.UI/src/index.html
+++ b/src/Payroll.UI/src/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="/node_modules/angular-i18n/angular-locale_fr-fr.js"></script>
 </body>
 </html>
